# CameraGuiPlugin

./: CMakeLists.txt  CameraGuiPlugin.cc  CameraGuiPlugin.hh  README.md  gazebo_camera_plugin.world
